chore: set artillery version to 2.0.0-14

--- a/socket-io/package.json
+++ b/socket-io/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "artillery": "^1.7.2",
+    "artillery": "2.0.0-14",
     "socket.io": "^2.4.0"
   }
 }
